v0.8.0/_sources/reference/fury.actor.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`actor`
============
.. automodule:: fury.actor

.. currentmodule:: fury.actor
.. autosummary::

   Actor
   ArrowSource
   Assembly
   ButterflySubdivisionFilter
   CellArray
   CellPicker
   CleanPolyData
   ConeSource
   Container
   ContourFilter
   CylinderSource
   DataSetMapper
   DiskSource
   FloatArray
   Follower
   ImageActor
   ImageData
   ImageMapToColors
   ImageReslice
   LODActor
   LookupTable
   LoopSubdivisionFilter
   Matrix4x4
   OdfSlicerActor
   OutlineFilter
   PeakActor
   Points
   PolyData
   PolyDataMapper
   PolyDataMapper2D
   PolyDataNormals
   PolyVertex
   ScalarBarActor
   SphereSource
   SplineFilter
   TextActor3D
   Texture
   TextureMapToPlane
   TexturedActor2D
   TexturedSphereSource
   Transform
   TubeFilter
   UnstructuredGrid
   VectorText
   partial
   add_shader_callback
   apply_affine
   arrow
   attribute_to_actor
   axes
   billboard
   box
   colormap_lookup_table
   cone
   contour_from_label
   contour_from_roi
   cube
   cylinder
   deprecate_with_version
   deprecated_params
   disk
   dots
   figure
   fix_winding_order
   frustum
   get_actor_from_primitive
   grid
   label
   line
   lines_to_vtk_polydata
   load
   load_image
   markers
   numpy_to_vtk_colors
   numpy_to_vtk_matrix
   octagonalprism
   odf_slicer
   peak
   peak_slicer
   pentagonalprism
   point
   rectangle
   repeat_sources
   replace_shader_in_actor
   rgb_to_vtk
   rhombicuboctahedron
   scalar_bar
   sdf
   set_input
   set_polydata_triangles
   set_polydata_vertices
   shader_to_actor
   shallow_copy
   slicer
   sphere
   square
   streamtube
   superquadric
   surface
   tensor_slicer
   text_3d
   texture
   texture_2d
   texture_on_sphere
   texture_update
   triangularprism
   vector_text


.. currentmodule:: fury.actor


:class:`Actor`
~~~~~~~~~~~~~~


.. autoclass:: Actor
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ArrowSource`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ArrowSource
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Assembly`
~~~~~~~~~~~~~~~~~


.. autoclass:: Assembly
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ButterflySubdivisionFilter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ButterflySubdivisionFilter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`CellArray`
~~~~~~~~~~~~~~~~~~


.. autoclass:: CellArray
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`CellPicker`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: CellPicker
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`CleanPolyData`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CleanPolyData
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ConeSource`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: ConeSource
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Container`
~~~~~~~~~~~~~~~~~~


.. autoclass:: Container
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ContourFilter`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ContourFilter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`CylinderSource`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CylinderSource
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`DataSetMapper`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DataSetMapper
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`DiskSource`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: DiskSource
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`FloatArray`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: FloatArray
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Follower`
~~~~~~~~~~~~~~~~~


.. autoclass:: Follower
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ImageActor`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: ImageActor
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ImageData`
~~~~~~~~~~~~~~~~~~


.. autoclass:: ImageData
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ImageMapToColors`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ImageMapToColors
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ImageReslice`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ImageReslice
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`LODActor`
~~~~~~~~~~~~~~~~~


.. autoclass:: LODActor
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`LookupTable`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LookupTable
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`LoopSubdivisionFilter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LoopSubdivisionFilter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Matrix4x4`
~~~~~~~~~~~~~~~~~~


.. autoclass:: Matrix4x4
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`OdfSlicerActor`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: OdfSlicerActor
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`OutlineFilter`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: OutlineFilter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PeakActor`
~~~~~~~~~~~~~~~~~~


.. autoclass:: PeakActor
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Points`
~~~~~~~~~~~~~~~


.. autoclass:: Points
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PolyData`
~~~~~~~~~~~~~~~~~


.. autoclass:: PolyData
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PolyDataMapper`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PolyDataMapper
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PolyDataMapper2D`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PolyDataMapper2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PolyDataNormals`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PolyDataNormals
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PolyVertex`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: PolyVertex
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ScalarBarActor`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ScalarBarActor
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`SphereSource`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SphereSource
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`SplineFilter`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SplineFilter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TextActor3D`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TextActor3D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Texture`
~~~~~~~~~~~~~~~~


.. autoclass:: Texture
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TextureMapToPlane`
~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TextureMapToPlane
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TexturedActor2D`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TexturedActor2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TexturedSphereSource`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TexturedSphereSource
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Transform`
~~~~~~~~~~~~~~~~~~


.. autoclass:: Transform
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TubeFilter`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: TubeFilter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`UnstructuredGrid`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: UnstructuredGrid
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`VectorText`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: VectorText
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`partial`
~~~~~~~~~~~~~~~~


.. autoclass:: partial
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

add_shader_callback
~~~~~~~~~~~~~~~~~~~

.. autofunction:: add_shader_callback

apply_affine
~~~~~~~~~~~~

.. autofunction:: apply_affine

arrow
~~~~~

.. autofunction:: arrow

attribute_to_actor
~~~~~~~~~~~~~~~~~~

.. autofunction:: attribute_to_actor

axes
~~~~

.. autofunction:: axes

billboard
~~~~~~~~~

.. autofunction:: billboard

box
~~~

.. autofunction:: box

colormap_lookup_table
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: colormap_lookup_table

cone
~~~~

.. autofunction:: cone

contour_from_label
~~~~~~~~~~~~~~~~~~

.. autofunction:: contour_from_label

contour_from_roi
~~~~~~~~~~~~~~~~

.. autofunction:: contour_from_roi

cube
~~~~

.. autofunction:: cube

cylinder
~~~~~~~~

.. autofunction:: cylinder

deprecate_with_version
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: deprecate_with_version

deprecated_params
~~~~~~~~~~~~~~~~~

.. autofunction:: deprecated_params

disk
~~~~

.. autofunction:: disk

dots
~~~~

.. autofunction:: dots

figure
~~~~~~

.. autofunction:: figure

fix_winding_order
~~~~~~~~~~~~~~~~~

.. autofunction:: fix_winding_order

frustum
~~~~~~~

.. autofunction:: frustum

get_actor_from_primitive
~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: get_actor_from_primitive

grid
~~~~

.. autofunction:: grid

label
~~~~~

.. autofunction:: label

line
~~~~

.. autofunction:: line

lines_to_vtk_polydata
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: lines_to_vtk_polydata

load
~~~~

.. autofunction:: load

load_image
~~~~~~~~~~

.. autofunction:: load_image

markers
~~~~~~~

.. autofunction:: markers

numpy_to_vtk_colors
~~~~~~~~~~~~~~~~~~~

.. autofunction:: numpy_to_vtk_colors

numpy_to_vtk_matrix
~~~~~~~~~~~~~~~~~~~

.. autofunction:: numpy_to_vtk_matrix

octagonalprism
~~~~~~~~~~~~~~

.. autofunction:: octagonalprism

odf_slicer
~~~~~~~~~~

.. autofunction:: odf_slicer

peak
~~~~

.. autofunction:: peak

peak_slicer
~~~~~~~~~~~

.. autofunction:: peak_slicer

pentagonalprism
~~~~~~~~~~~~~~~

.. autofunction:: pentagonalprism

point
~~~~~

.. autofunction:: point

rectangle
~~~~~~~~~

.. autofunction:: rectangle

repeat_sources
~~~~~~~~~~~~~~

.. autofunction:: repeat_sources

replace_shader_in_actor
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: replace_shader_in_actor

rgb_to_vtk
~~~~~~~~~~

.. autofunction:: rgb_to_vtk

rhombicuboctahedron
~~~~~~~~~~~~~~~~~~~

.. autofunction:: rhombicuboctahedron

scalar_bar
~~~~~~~~~~

.. autofunction:: scalar_bar

sdf
~~~

.. autofunction:: sdf

set_input
~~~~~~~~~

.. autofunction:: set_input

set_polydata_triangles
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: set_polydata_triangles

set_polydata_vertices
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: set_polydata_vertices

shader_to_actor
~~~~~~~~~~~~~~~

.. autofunction:: shader_to_actor

shallow_copy
~~~~~~~~~~~~

.. autofunction:: shallow_copy

slicer
~~~~~~

.. autofunction:: slicer

sphere
~~~~~~

.. autofunction:: sphere

square
~~~~~~

.. autofunction:: square

streamtube
~~~~~~~~~~

.. autofunction:: streamtube

superquadric
~~~~~~~~~~~~

.. autofunction:: superquadric

surface
~~~~~~~

.. autofunction:: surface

tensor_slicer
~~~~~~~~~~~~~

.. autofunction:: tensor_slicer

text_3d
~~~~~~~

.. autofunction:: text_3d

texture
~~~~~~~

.. autofunction:: texture

texture_2d
~~~~~~~~~~

.. autofunction:: texture_2d

texture_on_sphere
~~~~~~~~~~~~~~~~~

.. autofunction:: texture_on_sphere

texture_update
~~~~~~~~~~~~~~

.. autofunction:: texture_update

triangularprism
~~~~~~~~~~~~~~~

.. autofunction:: triangularprism

vector_text
~~~~~~~~~~~

.. autofunction:: vector_text

